# flatcoin

./: .gitignore  chain-cache.db  pyproject.toml  wallet.json
chain-state/: chain-cache.db
chain-state/blocks/: 00000000-6247649d9bbb82b1e327a5317e5c4b5de18b07c9610be2badcaebee156a6760b  00000001-f7305576c485cd1f5e8d6bd071585b4c4ace4ae9251cc17cc85f553055ef03d4
flatcoin/: block.py  chain.py  coinstate.py  consensus.py  database.py  genesis.py  hash.py  mining.py  params.py  pow.py  reading.py  serialization.py  transaction.py  utils.py  validator.py  vm.py  wallet.py
flatcoin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flatcoin/networking/: disk_interface.py
flatcoin/scripts/: mine.py
scripts/: wipe-cache.sh
