[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flatcoin"
version = "0.1.0"
description = "A simple cryptocurrency project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "immutables",
    "ecdsa"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
flatcoin-mine = "flatcoin.scripts.mine:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]
